--- a/CodingTest/CodingTest.vcxproj.filters
+++ b/CodingTest/CodingTest.vcxproj.filters
@@ -39,12 +39,18 @@
     <ClCompile Include="samsunggogo.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="algospot_FESTIVAL.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="mirrorinput.txt">
       <Filter>리소스 파일</Filter>
     </Text>
     <Text Include="input.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="festivalinput.txt">
       <Filter>리소스 파일</Filter>
     </Text>
   </ItemGroup>
